--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet"  href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <title>Frontend Mentor | QR code component</title>
 
 </head>
@@ -14,8 +14,8 @@
   <div class="divprojet">
     <main>
       <img src="./images/image-qr-code.png" class="qrcode">
-      <p class="titre">Improve your front-end<br>skills by building projects</p>
-      <p class="description">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+      <p class="titre">Improve your front-end skills by building projects</p>
+      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>    
   </div>
 </body>
